# object-storage-client

./: Cargo.toml  README.md
src/: lib.rs  object_storage.rs  py.rs
src/backends/: azure.rs  common.rs  local.rs  mod.rs  s3.rs
