[package]
name = "object-storage-client"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
aws-config = "1.8.10"
aws-sdk-s3 = "1.111.0"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
futures = "0.3.31"
pyo3 = { version = "0.27.1", features = ["extension-module"] }
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
walkdir = "2.5.0"

[lib]
crate-type = ["rlib", "cdylib"]



[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
strip = true
